# risk-assessment

./: .env.example  .gitignore  APIKEYS.md  CLAUDE.md  DEPLOYMENT.md  PRD.md  README.md  docker-compose.local.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  ODOO_INTEGRATION.md  README.md  alembic.ini  postman_collection.json  pyproject.toml  requirements.txt  run_sms_tool.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260122_000003_create_us2_tables.py  20260123_000002_change_questions_to_group_id.py  20260123_000004_add_group_id_to_assessment_scores.py
backend/migrations/versions/: 20260122_000001_create_api_keys_table.py  20260122_000002_create_us1_tables.py  20260123_000001_add_question_groups_table.py  20260123_000003_add_submission_contacts_table.py  20260124_add_assessment_drafts.py  20260128_add_odoo_and_employee_fields.py  20260203_104219_fix_odoo_id_unique_constraint.py  20260208_000001_add_risk_score_columns.py
backend/questions/: Type - АГУУЛАХЫН АЮУЛГҮЙ БАЙДАЛ.md  Type - БАРИЛГЫН АЮУЛГҮЙ БАЙДАЛ.md  Type - ХӨДӨЛМӨРИЙН АЮУЛГҮЙ БАЙДАЛ.md  Type - ЦАХИЛГААНЫ АЮУЛГҮЙ БАЙДАЛ.md
backend/scripts/: __init__.py  assessment_service.py  backfill_risk_scores.py  config.py  config_template.yml  exceptions.py  http_client.py  models.py  phone_numbers.txt  phone_numbers_bkp.txt  processor.py  reporters.py  sms_service.py  test_assessment_sms.py  validators.py
backend/src/: __init__.py  cli.py  main.py
backend/src/api/: __init__.py  health.py
backend/src/core/: __init__.py  auth.py  config.py  database.py  logging.py  rate_limit.py  storage.py  validators.py
backend/src/models/: __init__.py  answer.py  api_key.py  assessment.py  assessment_draft.py  assessment_score.py  attachment.py  base.py  enums.py  question.py  question_group.py  question_option.py  questionnaire_type.py  respondent.py  submission_contact.py
backend/src/repositories/: __init__.py  assessment.py  draft.py  (+5 more)
backend/tests/: conftest.py
(+162 files in other folders)
